# rootspace

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .rustfmt.toml  :q:q  Cargo.toml  afl-asan.Dockerfile  afl.Dockerfile  docker-compose.yml  flake.nix  mock_scene.json  output.txt  rustfmt.toml  shell.nix
affine-transform/: Cargo.toml
affine-transform/src/: lib.rs
crates/assam/: Cargo.toml
crates/assam/src/: asset_database.rs  lib.rs  resources.rs
crates/dorothy/: .gitignore  Cargo.toml
crates/dorothy/proptest-regressions/: encoder.txt  goertzel.txt  lib.txt  util.txt
crates/dorothy/src/: encoder.rs  goertzel.rs  lib.rs  ring_buffer.rs  shared.rs  util.rs
crates/dorothy/tests/: decoder.rs  good-example.txt  roundtrip.rs
crates/ecs/: Cargo.toml
crates/ecs/src/: component.rs  entities.rs  event_monitor.rs  lib.rs  macros.rs  registry.rs  resource.rs  system.rs  with_dependencies.rs  with_resources.rs
crates/file-manipulation/: Cargo.toml
crates/file-manipulation/src/: lib.rs
crates/fuzz/: Cargo.toml  afl-asan.Dockerfile  afl-cmplog.Dockerfile  afl-compcov.Dockerfile  afl-main.Dockerfile  afl.Dockerfile  compose.yml
crates/fuzz/fuzz_targets/: parse_cbor.rs  parse_ply.rs
crates/glamour/: Cargo.toml
crates/glamour/src/: lib.rs  macros.rs  num.rs
crates/glamour/tests/: floating_point_errors.rs
crates/griffon/: Cargo.toml
crates/griffon/src/: lib.rs  macros.rs  resources.rs  utilities.rs
crates/plyers/: Cargo.toml
crates/plyers/benches/: plyers_benchmarks.rs
crates/plyers/examples/: ply_loader.rs
crates/plyers/src/: lib.rs
crates/plyers/tests/: cube.ply  garbage.ply  heavy_comments_ascii.ply  incomplete_header.ply  minimal_ascii.ply
crates/rootspace/: Cargo.toml
crates/rootspace/examples/: create_scene.rs  wgpu_playground.rs  wgpu_tutorial10_lighting.rs
crates/rootspace/src/: app.rs  lib.rs  macros.rs  orchestrator.rs  registry.rs
crates/rose-tree/: Cargo.toml
crates/rose-tree/src/: hierarchy.rs  lib.rs  tree.rs
crates/vega/: Cargo.toml  README.md
crates/vega-codegen/: Cargo.toml
crates/vega-codegen/src/: helpers.rs  lib.rs
crates/vega-codegen/tests/: algebra_2_0_0.rs  user_interface.rs
crates/vega/src/: lib.rs
ecs/: .gitignore  Cargo.toml
ecs/src/: component.rs  components.rs  database.rs  entities.rs  entity.rs  event.rs  event_monitor.rs  event_queue.rs  events.rs  hibitset.rs  indexing.rs  lib.rs  loop_control.rs  loop_stage.rs  macros.rs  maybe_default.rs  mock.rs  persistence.rs  registry.rs  resource.rs  resources.rs  scene.rs  serialization_name.rs  serialization_proxy.rs  short_type_name.rs  system.rs  systems.rs  try_default.rs  type_registry.rs  with_dependencies.rs  with_resources.rs  world.rs
ecs/src/entity/: entity.rs  generation.rs  index.rs  mod.rs
ecs/src/event_queue/: mod.rs  receiver_id.rs  receiver_state.rs
ecs/src/indexing/: index.rs  mod.rs
ecs/src/mock/: context.rs  event.rs  mod.rs  system.rs  world.rs
ecs/src/resources/: components.rs  de_magic.rs  deserialization.rs  entities.rs  init_magic.rs  initialization.rs  mod.rs  recursors.rs  ser_magic.rs  serialization.rs  typed_resources.rs
ecs/src/storage/: bit_indices.rs  entry.rs  iterators.rs  joined_iterators.rs  mod.rs  vec_storage.rs  zst_storage.rs
ecs/src/systems/: deserialization.rs  mod.rs  recursors.rs  serialization.rs  typed_system.rs  typed_systems.rs
ecs/src/world/: deserialization.rs  error.rs  event.rs  joined_registry.rs  mod.rs  type_registry.rs
ecs/tests/: extraneous-types.json  insufficient-types.json  ok.json  test_scene_loading.rs
engine/: Cargo.toml  build.rs
engine/proptest-regressions/: orchestrator.txt  utilities.txt
engine/proptest-regressions/components/: camera.txt  model.txt
engine/src/: auxiliary.rs  context.rs  debug_commands.rs  error.rs  event.rs  event_interface.rs  event_monitor.rs  file_manipulation.rs  geometry.rs  hierarchy.rs  lib.rs  math.rs  mock.rs  orchestrator.rs  resources.rs  scene_graph.rs  systems.rs  text_manipulation.rs  text_rendering.rs  utilities.rs  wrappers.rs
engine/src/assets/: image.rs  mesh.rs  mod.rs  text.rs  vertex.rs
engine/src/components/: camera.rs  info.rs  layer.rs  mod.rs  model.rs  (+3 more)
engine/tests/: cube.ply  fragment.glsl
engine2/: Cargo.toml
engine2/examples/: scene.rs  test.rs
engine2/src/: lib.rs  macros.rs  orchestrator.rs  registry.rs
file-manipulation/: Cargo.toml
file-manipulation/src/: lib.rs
fuzz/: .gitignore  Cargo.toml  afl-asan.Dockerfile  afl-cfisan.Dockerfile  afl-cmplog.Dockerfile  afl-compcov.Dockerfile  afl-main.Dockerfile  afl-san.Dockerfile  afl.Dockerfile  compose.yml  docker-compose.yml
game/: Cargo.toml
game/src/: auxiliary.rs  event.rs  lib.rs  systems.rs
glamour/: Cargo.toml
glamour/proptest-regressions/: mat.txt
glamour/src/: affine.rs  cross.rs  dim.rs  dot.rs  float_and_sum.rs  iter_float.rs  lib.rs  macros.rs  mat.rs  mat2.rs  mul_elem.rs  num.rs  ortho.rs  persp.rs  point.rs  quat.rs  ray.rs  unit.rs  vec2.rs  vec3.rs  vec4.rs
hierarchy/: Cargo.toml
hierarchy/src/: lib.rs
pacman/: Cargo.toml
pacman/src/: lib.rs  player_character.rs
ply/: Cargo.toml
ply/src/: lib.rs  macros.rs  types.rs
ply/tests/: cube-ascii.ply  cube-be.ply  ply_ascii.rs
plyers/: Cargo.toml
plyers/benches/: plyers_benchmarks.rs
plyers/examples/: loader.rs  ply_loader.rs
plyers/proptest-regressions/: generic_parsers.txt  ply_parsers.txt
plyers/src/: and_then.rs  engram.rs  error.rs  generic_parsers.rs  lib.rs  ply.rs  ply_parsers.rs  tables.rs  types.rs  utilities.rs
plyers/tests/: changing_dtypes.ply  cube.ply  db_tall_obstacle_0.ply  heavy_comments_ascii.ply  minimal_ascii.ply  pasillo_1.ply  saved_terrain.ply  string_property.ply
rootspace/: Cargo.toml
rootspace/examples/: create_scene.rs
rootspace/src/: debug_commands.rs  lib.rs  orchestrator.rs  registry.rs  settings.rs
rootspace/tests/: segfault.json  test_scene_loading.rs
rose-tree/: Cargo.toml
rose-tree/src/: hierarchy.rs  lib.rs  octree.rs  tree.rs
rose-tree/tests/: test_spatial_partitioning.rs
(+830 files in other folders)
