[workspace]
resolver = "2"
members = [
  "crates/assam",
  "crates/ecs",
  "crates/file-manipulation",
  "crates/forward-ref",
  "crates/glamour",
  "crates/griffon",
  "crates/plyers",
  "crates/rootspace",
  "crates/rose-tree",
  "crates/urn",
  "crates/vega",
  "crates/vega-codegen",
  "crates/vega-internal",
  # Experimenting crates
  "crates/effie",
  "crates/ikebana",
  "crates/rat",
]
exclude = [
  "crates/fuzz",
]

[workspace.package]
authors = ["Eleanor Young <developer@nausicaea.net>"]
license = "GPL-3"
edition = "2024"
rust-version = "1.88"

[profile.release]
panic = "abort"

