[workspace]
resolver = "2"
members = [
  "crates/assam",
  "crates/ecs",
  "crates/file-manipulation",
  "crates/forward-ref",
  "crates/glamour",
  "crates/griffon",
  "crates/plyers",
  "crates/rootspace",
  "crates/rose-tree",
  "crates/urn",
  "crates/vega",
  "crates/vega-codegen",
  "crates/vega-internal",

  # Experimenting crates
  "crates/dorothy",
]
exclude = [
  "crates/fuzz",
]

[workspace.package]
authors = ["Eleanor Young <developer@nausicaea.net>"]
license = "GPL-3"
edition = "2024"
rust-version = "1.88"

[workspace.dependencies]
assam = { path = "crates/assam" }
ecs = { path = "crates/ecs" }
file-manipulation = { path = "crates/file-manipulation" }
forward-ref = { path = "crates/forward-ref" }
glamour = { path = "crates/glamour" }
griffon = { path = "crates/griffon" }
plyers = { path = "crates/plyers" }
rose-tree = { path = "crates/rose-tree" }
urn = { path = "crates/urn" }
vega = { path = "crates/vega"}
vega-codegen = { path = "crates/vega-codegen" }
vega-internal = { path = "crates/vega-internal" }

[profile.release]
panic = "abort"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
