[package]
name = "affine-transform"
version = "0.4.0"
authors = ["Eleanore Young"]
description = "This crate provides a decomposed version of an affine TRS matrix, one missing in nalgebra."
repository = "https://gitlab.com/nausicaea/affine-transform.git"
edition = "2018"

[features]
serde_support = ["serde", "serde_derive", "nalgebra/serde-serialize"]

[dependencies]
nalgebra = "^0.21.0"
serde = { version = "^1.0.0", optional = true }
serde_derive = { version = "^1.0.0", optional = true }

[dev-dependencies]
serde = { version = "^1.0.0" }
serde_test = "^1.0.0"
