[package]
name = "affine-transform"
version = "0.4.1"
authors = ["Eleanore Young"]
description = "This crate provides a decomposed version of an affine TRS matrix, one missing in nalgebra."
repository = "https://gitlab.com/nausicaea/affine-transform.git"
edition = "2018"

[features]
serde_support = ["serde", "nalgebra/serde-serialize"]

[dependencies]
nalgebra = "^0.29.0"
serde = { version = "^1.0.0", features = [ "derive" ], optional = true }

[dev-dependencies]
nalgebra = { version = "^0.29.0", features = ["serde-serialize"] }
serde = { version = "^1.0.0", features = [ "derive" ] }
serde_test = "^1.0.0"
