[package]
name = "ecs"
version = "0.7.0"
authors = ["Eleanore Young"]
description = "The ecs library provides facilities to build an Entity-Component-System architecture"
edition = "2018"

[dependencies]
thiserror = "^1.0.0"
downcast-rs = "^1.0.0"
log = "^0.4.1"
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
rmp-serde = "^0.14.0"
file-manipulation = { path = "../file-manipulation" }
regex = "^1.4"
lazy_static = "^1.4"

[dev-dependencies]
fern = "^0.6.0"
serde_test = { version = "^1.0.0" }
proptest = "^0.10.0"
