[package]
name = "ecs"
version = "0.9.2"
authors = ["Eleanore Young"]
description = "The ecs library provides facilities to build an Entity-Component-System architecture"
edition = "2021"

[dependencies]
thiserror = "^1.0.0"
anyhow = "^1.0.40"
downcast-rs = "^1.0.0"
log = "^0.4.1"
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
file-manipulation = { path = "../file-manipulation", features = ["serde_support"] }
try-default = { path = "../try-default" }
regex = "^1.4"
lazy_static = "^1.4"
either = { version = "^1.6", features = ["serde"] }

[dev-dependencies]
fern = "^0.6.0"
serde_test = { version = "^1.0.0" }
proptest = "^1.0.0"
