[package]
name = "engine"
version = "0.1.2"
authors = ["Eleanore Young"]
edition = "2018"

[features]
wsl = []

[dependencies]
directories = "^3.0"
approx = "^0.5.0"
clap = { version = "^2.0.0", features = ["yaml"] }
ctrlc = { version = "^3.0.0", features = ["termination"] }
anyhow = "^1.0.0"
thiserror = "^1.0.0"
glium = "^0.25.0"
winit = "^0.19.5"
image = { version = "^0.23.0", default-features = true, features = ["png"] }
log = "^0.4.1"
nalgebra = { version = "^0.29.0", features = ["serde-serialize"] }
num-traits = "^0.2.6"
rusttype = { version = "^0.8.0", features = ["gpu_cache"] }
unicode-normalization = "^0.1.5"
snowflake = "^1.2.0"
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
affine-transform = { path = "../affine-transform", features = ["serde_support"] }
try-default = { path = "../try-default" }
ply = { path = "../ply" }
ecs = { path = "../ecs" }
file-manipulation = { path = "../file-manipulation", features = ["serde_support"] }
term-table = "^1.3.1"
rose-tree = { path = "../rose-tree", features = ["ecs", "serde_support"] }

[dev-dependencies]
serde_test = { version = "^1.0.0" }
approx = "^0.3.0"
tempfile = "^3.0.1"
proptest = "^0.10.0"
