[package]
name = "engine"
version = "0.1.2"
authors = ["Eleanore Young"]
edition = "2021"

[features]
wsl = []
spirv = ["wgpu/spirv"]

[dependencies]
directories = "^4.0"
approx = "^0.5.0"
clap = { version = "^2.0.0", features = ["yaml"] }
ctrlc = { version = "^3.0.0", features = ["termination"] }
anyhow = "^1.0.0"
thiserror = "^1.0.0"
glium = "^0.25.0"
winit = "^0.19.5"
image = { version = "^0.23.0", default-features = true, features = ["png"] }
log = "^0.4.1"
num-traits = "^0.2.6"
rusttype = { version = "^0.8.0", features = ["gpu_cache"] }
unicode-normalization = "^0.1.5"
snowflake = "^1.2.0"
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
try-default = { path = "../try-default" }
ecs = { path = "../ecs" }
file-manipulation = { path = "../file-manipulation", features = ["serde_support"] }
term-table = "^1.3.1"
rose-tree = { path = "../rose-tree", features = ["ecs", "serde_support"] }
glamour = { path = "../glamour", features = ["serde_support"] }
forward-ref = { path = "../forward-ref" }
wgpu = "0.12"
wgpu-types = { version = "0.12", features = ["trace", "replay"] }
pollster = "0.2.5"
bytemuck = { version = "1.4", features = [ "derive" ] }
tobj = { version = "3.2.2", features = ["async"] }

[dev-dependencies]
serde_test = { version = "^1.0.0" }
approx = "^0.5.0"
tempfile = "^3.0.1"
proptest = "^1.0.0"
