[package]
name = "engine2"
version = "0.1.0"
edition = "2021"

[features]
loopdbg = []
# spirv = ["wgpu/spirv"]

[dependencies]
env_logger = "0.9" # Only used for wgpu.rs
log = "0.4"
winit = { version = "0.27", features = ["serde"] }
wgpu = "0.14"
wgpu-types = { version = "0.14", features = ["trace", "replay"] }
pollster = "0.2.5"
tokio = "1.23.0"

anyhow = "1.0.66"
ctrlc = { version = "^3.0.0", features = ["termination"] }
directories = "^4.0"
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
thiserror = "^1.0.0"

ecs = { path = "../ecs" }
file-manipulation = { path = "../file-manipulation", features = ["serde_support"] }
try-default = { path = "../try-default" }

# bytemuck = { version = "1.4", features = [ "derive" ] }
# tobj = { version = "3.2.2", features = ["async"] }
