[package]
name = "engine2"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine2"

[features]
loopdbg = []
# spirv = ["wgpu/spirv"]

[dependencies]
log = "^0.4"
winit = { version = "^0.27", features = ["serde"] }
wgpu = "^0.14"
wgpu-types = { version = "^0.14", features = ["trace", "replay"] }
pollster = "^0.2.5"

anyhow = "^1.0.0"
ctrlc = { version = "^3.0.0", features = ["termination"] }
directories = "^4.0"
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
thiserror = "^1.0.0"
approx = "^0.5.0"

ecs = { path = "../ecs" }
file-manipulation = { path = "../file-manipulation", features = ["serde_support"] }
rose-tree = { path = "../rose-tree", features = ["ecs", "serde_support"] }
glamour = { path = "../glamour", features = ["serde_support"] }
forward-ref = { path = "../forward-ref" }
plyers = { path = "../plyers" }

# bytemuck = { version = "1.4", features = [ "derive" ] }
# tobj = { version = "3.2.2", features = ["async"] }

[dev-dependencies]
env_logger = "^0.9"
proptest = "^1.0.0"

[[example]]
name = "test"
