[package]
name = "file-manipulation"
version = "0.1.2"
authors = ["Eleanore Young <developer@nausicaea.net>"]
description = "This crate provides path abstractions that provide type-level guarantees about the contents of the path"
edition = "2018"

[features]
serde_support = [ "serde" ]

[dependencies]
dirs = "^3.0"
log = "^0.4.14"
anyhow = "^1.0.40"
thiserror = "^1.0.0"
serde = { version = "^1.0.0", features = [ "derive" ], optional = true }

[dev-dependencies]
tempfile = "^3.0.1"
serde = { version = "^1.0.0", features = [ "derive" ] }
serde_test = "^1.0.0"
