[package]
name = "game"
version = "0.1.0"
authors = ["Eleanore Young"]
edition = "2018"

[features]
diagnostics = []

[dependencies]
bitflags = "^1.0.3"
log = "^0.4.1"
failure = "^0.1.1"
glium = "^0.22.0"
nalgebra = "^0.16.0"
ecs = {git = "https://gitlab.com/nausicaea/ecs.git"}
engine = {path = "../engine"}
