[package]
name = "glamour"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde_support"]
serde_support = ["serde"]

[dependencies]
thiserror = "^1.0.0"
num-traits = "^0.2.14"
num-complex = "^0.4.0"
num-dual = "^0.5.1"
approx = "^0.5.0"
serde = { version = "^1.0.0", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "^1.0.0"
serde = { version = "^1.0.0", features = ["derive"]}
serde_test = "^1.0.126"
