[package]
name = "hierarchy"
version = "0.2.2"
authors = ["Eleanore Young"]
description = "Provides a datastructure that allows to describe hierarchical relationships between identifiers and associated data."
repository = "https://gitlab.com/nausicaea/hierarchy.git"
edition = "2018"

[features]
serde_support = ["serde", "serde_derive", "daggy/serde-1"]

[dependencies]
thiserror = "^1.0.0"
daggy = "^0.6.0"
serde = { version = "^1.0.0", optional = true }
serde_derive = { version = "^1.0.0", optional = true }

[dev-dependencies]
serde = { version = "^1.0.0" }
serde_test = "^1.0.0"
