[package]
name = "hierarchy"
version = "0.2.4"
authors = ["Eleanore Young"]
description = "Provides a datastructure that allows to describe hierarchical relationships between identifiers and associated data."
repository = "https://gitlab.com/nausicaea/hierarchy.git"
edition = "2018"

[features]
serde_support = ["serde", "daggy/serde-1"]

[dependencies]
thiserror = "^1.0.0"
daggy = "^0.7.0"
serde = { version = "^1.0.0", optional = true, features = ["derive"] }

[dev-dependencies]
daggy = { version = "^0.7.0", features = ["serde-1"] }
serde = { version = "^1.0.0", features = ["derive"] }
serde_test = "^1.0.0"
