[package]
name = "pacman"
version = "0.1.1"
authors = ["Eleanore Young"]
edition = "2018"

[dependencies]
log = "^0.4.1"
anyhow = "^1.0.0"
nalgebra = { version = "^0.18.0", features = ["serde-serialize"] }
serde = { version = "^1.0.0", features = ["derive"] }
ecs = {path = "../ecs"}
engine = {path = "../engine"}
