[package]
name = "pacman"
version = "0.1.1"
authors = ["Eleanore Young"]
edition = "2018"

[dependencies]
clap = { version = "^2.0.0", default-features = false }
fern = "^0.6.0"
log = "^0.4.1"
anyhow = "^1.0.0"
thiserror = "^1.0.0"
nalgebra = { version = "^0.21.0", features = ["serde-serialize"] }
serde = { version = "^1.0.0", features = ["derive"] }
ecs = {path = "../ecs"}
engine = {path = "../engine"}
