[package]
name = "rootspace"
version = "0.1.1"
authors = ["Eleanore Young"]
edition = "2021"

[dependencies]
directories = "^4.0"
clap = { version = "^3.0.0", features = ["yaml", "derive"] }
fern = "^0.6.0"
log = "^0.4.1"
bitflags = "^1.0.0"
anyhow = "^1.0.0"
thiserror = "^1.0.0"
daggy = { version = "^0.7.0", features = ["serde-1"] }
chrono = { version = "^0.4.0", features = ["serde"] }
glium = "^0.25.0"
serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"
ecs = {path = "../ecs"}
engine = {path = "../engine"}
file-manipulation = {path = "../file-manipulation"}

[dev-dependencies]
proptest = "^1.0.0"
