[package]
name = "rose-tree"
version = "0.1.0"
authors = ["Eleanore Young"]
edition = "2018"

[features]
default = ["serde_support"]
serde_support = ["serde"]

[dependencies]
nalgebra = "^0.27.1"
serde = { version = "^1.0.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_test = "^1.0.126"
