[package]
name = "rose-tree"
version = "0.1.0"
authors = ["Eleanore Young"]
edition = "2018"

[features]
default = ["serde_support"]
serde_support = ["serde"]

[dependencies]
serde = { version = "^1.0.0", features = ["derive"], optional = true }
ecs = { path = "../ecs", optional = true }

[dev-dependencies]
serde = { version = "^1.0.0", features = ["derive"]}
ecs = { path = "../ecs" }
serde_test = "^1.0.126"
