[package]
name = "rose-tree"
version = "0.1.1"
authors = ["Eleanore Young"]
edition = "2021"

[features]
default = ["serde_support"]
serde_support = ["dep:serde"]
ecs = ["dep:ecs"]

[dependencies]
serde = { version = "^1.0.0", features = ["derive"], optional = true }
ecs = { path = "../ecs", optional = true }

[dev-dependencies]
serde = { version = "^1.0.0", features = ["derive"]}
ecs = { path = "../ecs" }
serde_test = "^1.0.126"
