[package]
name = "assam"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "^1.0.0" }
directories = "^6.0"
ecs.workspace = true
file-manipulation.workspace = true
regex = "^1.0"
thiserror = "^2.0.17"
tracing = "^0.1.40"
