[package]
name = "ecs"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "^1.0.0" }
async-trait = "^0.1.77"
downcast-rs = "^2.0.2"
futures = { version = "^0.3.30", default-features = false, features = ["std"] }
parking_lot = { version = "^0.12.3", features = ["send_guard"] }
serde = { version = "^1.0.0", features = ["derive"] }
thiserror = "^2.0.17"
tokio = { version = "^1.36.0", features = ["rt", "sync", "macros"] }
tracing = "^0.1.40"

[dev-dependencies]
mutants = "^0.0.3"
proptest = "^1.0.0"
serde_test = "^1.0.126"
tokio = { version = "^1.36.0", features = ["rt", "macros", "sync"] }

