[package]
name = "file-manipulation"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "^1.0.0" }
directories = "^6.0"
serde = { version = "^1.0.0", features = ["derive"] }
thiserror = "^2.0.17"
tracing = "^0.1.40"

[dev-dependencies]
serde_test = "^1.0.126"
tempfile = "^3.0.1"
