[package]
name = "glamour"
version = "0.1.0"
authors = ["Eleanor Young <developer@nausicaea.net>"]
edition = "2021"

[dependencies]
approx = "^0.5.0"
forward-ref = { path = "../forward-ref" }
lapack = "^0.19.0"
lapack-src = { version = "^0.10", features = ["accelerate"] }
num-traits = "^0.2.14"
serde = { version = "^1.0.0", features = ["derive"] }
thiserror = "^1.0.0"
tracing = "^0.1.40"

[dev-dependencies]
cgmath = "^0.18.0"
nalgebra = "^0.32.4"
proptest = "^1.0.0"
serde_test = "^1.0.126"
