[package]
name = "griffon"
version = "0.1.0"
edition = "2024"

[features]
renormalize = []
dbg-gfx = ["tracing/log"]

[dependencies]
anyhow = { version = "^1.0.0" }
assam = { path = "../assam" }
bytemuck = { version = "^1.0", features = [ "derive" ] }
ecs = { path = "../ecs" }
image = { version = "^0.25", default-features = false, features = ["png", "jpeg"] }
plyers = { path = "../plyers" }
serde = { version = "^1.0.0", features = ["derive"] }
tracing = { version = "^0.1.40" }
urn = { path = "../urn" }
wgpu = { version = "^0.20.1", features = ["serde", "trace", "replay"] }
winit = { version = "^0.29", features = ["serde"] }
