[package]
name = "griffon"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
renormalize = []
dbg-gfx = ["tracing/log"]

[dependencies]
anyhow = { version = "^1.0.0" }
assam.workspace = true
bytemuck = { version = "^1.0", features = [ "derive" ] }
ecs.workspace = true
glamour.workspace = true
image = { version = "^0.25", default-features = false, features = ["png", "jpeg"] }
plyers.workspace = true
serde = { version = "^1.0.0", features = ["derive"] }
tracing = { version = "^0.1.40" }
urn.workspace = true
wgpu = { version = "^27.0.0" }
wgpu-core = { version = "^27.0.0" }
wgpu-types = { version = "^27.0.0", features = ["serde"] }
winit = { version = "^0.29", features = ["serde"] }
thiserror = "^2.0.17"
