[package]
name = "plyers"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "^4.0.0", default-features = false, features = ["std"] }
either = "^1.0"
file-manipulation.workspace = true
nom = "^7.0.0"
num-traits = "^0.2.14"
thiserror = "^2.0.17"
tracing = "^0.1.40"
urn.workspace = true

[dev-dependencies]
anyhow = { version = "^1.0.0" }
criterion = { version = "^0.8.0", features = ["html_reports"] }
mutants = "^0.0.3"
proptest = "^1.0.0"
proptest-derive = "^0.7.0"
rstest = "^0.26.1"
tempfile = "^3.0.1"
tracing-subscriber = { version = "^0.3.18", features = ["env-filter"] }

[[example]]
name = "ply_loader"

[[bench]]
name = "plyers_benchmarks"
harness = false

[lints]
workspace = true
