[package]
name = "rootspace"
version = "0.1.0"
authors = ["Eleanor Young <developer@nausicaea.net>"]
edition = "2021"

[features]
editor = []
renormalize = []
dbg-gfx = []
dbg-loop = []
tokio-console = ["console-subscriber"]

[dependencies]
anyhow = { version = "1.0.0" }
approx = "0.5.0"
async-trait = "0.1.77"
bytemuck = { version = "1.0", features = [ "derive" ] }
ciborium = "^0.2.0"
clap = { version = "4.0.0", features = ["derive"] }
console-subscriber = { version = "0.2.0", optional = true }
ctrlc = { version = "3.0.0", features = ["termination"] }
directories = "5.0"
ecs = { path = "../ecs" }
file-manipulation = { path = "../file-manipulation" }
futures = { version = "0.3.30", default-features = false, features = ["std"] }
glamour = { path = "../glamour" }
humantime = "2.1.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
itertools = "0.13.0"
lazy_static = "1.0"
num-traits = "0.2.14"
plyers = { path = "../plyers" }
regex = "1.0"
rose-tree = { path = "../rose-tree" }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
tarpc = { version = "0.34.0", features = ["serde-transport-bincode", "tcp", "serde-transport"] }
thiserror = "1.0.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "sync", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urn = { path = "../urn" }
wgpu = { version = "0.19", features = ["serde", "trace", "replay"] }
winit = { version = "0.29", features = ["serde"] }

[lib]
name = "rootspace"

[[bin]]
name = "rpc_client"

[[bin]]
name = "rootspace"

[[example]]
name = "wgpu_playground"

[[example]]
name = "create_scene"
