[package]
name = "rootspace"
version = "0.1.0"
authors = ["Eleanor Young <developer@nausicaea.net>"]
edition = "2024"

[features]
editor = []
dbg-loop = []
tokio-console = ["console-subscriber"]

[dependencies]
anyhow = { version = "^1.0.0" }
approx = "^0.5.0"
assam = { path = "../assam" }
async-trait = "^0.1.77"
ciborium = "^0.2.0"
clap = { version = "^4.0.0", features = ["derive"] }
console-subscriber = { version = "^0.5.0", optional = true }
ctrlc = { version = "^3.0.0", features = ["termination"] }
ecs = { path = "../ecs" }
futures = { version = "^0.3.30", default-features = false, features = ["std"] }
glamour = { path = "../glamour" }
griffon = { path = "../griffon" }
humantime = "^2.1.0"
itertools = "^0.14.0"
num-traits = "^0.2.14"
rose-tree = { path = "../rose-tree" }
serde = { version = "^1.0.0", features = ["derive"] }
tarpc = { version = "^0.37.0", features = ["serde-transport-bincode", "tcp", "serde-transport"] }
thiserror = "^2.0.17"
tokio = { version = "^1.36.0", features = ["full"] }
tracing = { version = "^0.1.40" }
tracing-subscriber = { version = "^0.3.18", features = ["env-filter"] }

[dev-dependencies]
bytemuck = "1.24.0"
cgmath = "0.18.0"
image = "0.25.9"
tobj = { version = "3.2", default-features = false, features = ["async"]}

[lib]
name = "rootspace"

[[bin]]
name = "rpc_client"

[[bin]]
name = "rootspace"

[[example]]
name = "wgpu_playground"

[[example]]
name = "wgpu_tutorial10_lighting"

[[example]]
name = "create_scene"
