[package]
name = "rootspace"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
editor = []
dbg-loop = []
tokio-console = ["dep:console-subscriber"]

[dependencies]
anyhow = { version = "^1.0.0" }
approx = "^0.5.0"
assam.workspace = true
ciborium = "^0.2.0"
clap = { version = "^4.0.0", features = ["derive"] }
console-subscriber = { version = "^0.5.0", optional = true }
ctrlc = { version = "^3.0.0", features = ["termination"] }
ecs.workspace = true
futures = { version = "^0.3.30", default-features = false, features = ["std"] }
glamour.workspace = true
griffon.workspace = true
humantime = "^2.1.0"
itertools = "^0.14.0"
num-traits = "^0.2.14"
rose-tree.workspace = true
serde = { version = "^1.0.0", features = ["derive"] }
tarpc = { version = "^0.37.0", features = ["serde-transport-bincode", "tcp", "serde-transport"] }
thiserror = "^2.0.17"
tracing = { version = "^0.1.40" }
tracing-subscriber = { version = "^0.3.18", features = ["env-filter"] }
smol = "2.0.2"

[lib]
name = "rootspace"

[[bin]]
name = "rpc_client"

[[bin]]
name = "rootspace"

[[example]]
name = "wgpu_playground"

[[example]]
name = "create_scene"
