[package]
name = "rose-tree"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "^1.0.0" }
ecs.workspace = true
serde = { version = "^1.0.0", features = ["derive"] }
tracing = "^0.1.40"

[dev-dependencies]
serde_test = "^1.0.126"

[lints]
workspace = true
