[package]
name = "vega"
description = "Provides geometric algebra primitives"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
num-traits = "0.2.18"
vega-internal.workspace = true
vega-codegen.workspace = true

